--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,6 @@
 # "org" ensures this Service is used with the correct Serverless Framework Access Key.
 org: yousefs
+
 # "service" is the name of this project. This will also be added to your AWS resource names.
 service: aws-Exam-2024
 
@@ -16,7 +17,6 @@ build:
 
 package:
   individually: true
-
 
 functions:
   CreateRoom:
@@ -88,11 +88,12 @@ resources:
           - AttributeName: roomType
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
-# Exempel på rooms data:
+
+# Example data for rooms:
 # [
-#   { "roomType": "single", "guestsAllowed": 1, "price": 500, availableRooms: 8 },
-#   { "roomType": "double", "guestsAllowed": 2, "price": 1000, availableRooms: 8 },
-#   { "roomType": "suite", "guestsAllowed": 3, "price": 1500, availableRooms: 4 }
+#   { "roomType": "single", "guestsAllowed": 1, "price": 500, "availableRooms": 8 },
+#   { "roomType": "double", "guestsAllowed": 2, "price": 1000, "availableRooms": 8 },
+#   { "roomType": "suite", "guestsAllowed": 3, "price": 1500, "availableRooms": 4 }
 # ]
-# Vi behöver inte söka efter individuella rum ( behövs inte roomId ) utan bara rumstyper
-# checkInDate som GSI - om man vill sortera alla bokningar efter datum
+# We don't need to search for individual rooms (roomId not required), just room types.
+# checkInDate as GSI - for sorting bookings by date.
