lagt till delete endpoint i yaml och skapat en deleteBooking-funktion, Installerat moment för att räkna ut skillnad i dagarna

--- a/serverless.yml
+++ b/serverless.yml
@@ -53,6 +53,13 @@ functions:
           path: /booking/{id}
           method: put
 
+  DeleteBooking:
+    handler: functions/DeleteBooking/index.handler
+    events:
+      - httpApi:
+          path: /booking/{id}
+          method: delete
+
 resources:
   Resources:
     Bookings:
