--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.651.1",
     "@aws-sdk/lib-dynamodb": "^3.651.1",
+    "moment": "^2.30.1",
     "uuid": "^10.0.0"
   },
   "name": "bonzaihotel",
   "version": "1.0.0",
   "description": "<!-- title: 'AWS Simple HTTP Endpoint example in NodeJS' description: 'This template demonstrates how to make a simple HTTP API with Node.js running on AWS Lambda and API Gateway using the Serverless Framework.' layout: Doc framework: v4 platform: AWS language: nodeJS authorLink: 'https://github.com/serverless' authorName: 'Serverless, Inc.' authorAvatar: 'https://avatars1.githubusercontent.com/u/13742415?s=200&v=4' -->",
   "main": "handler.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
