fixed structue everything works with delete vg

--- a/serverless.yml
+++ b/serverless.yml
@@ -54,8 +54,12 @@ functions:
           path: /booking/{id}
           method: put
         
-    
-
+  DeleteBooking:
+    handler: functions/DeleteBooking/index.handler
+    events:
+      - httpApi:
+          path: /booking/{id}
+          method: delete
 resources:
   Resources:
     Bookings:
